2006-08-01  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* doc/Makefile.am: Use html.stamp target to prevent unneccessary
	generation of document.

2006-08-01  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* include/thai/thctype.h: Fix HTML errors in documentation comments.

	* include/thai/thctype.h, man/man3/thctype.3: Fix typo.

	* include/thai/thrend.h: Fix errors in doxygen tags in comments.

2006-08-01  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* include/thai/wtt.h, src/thctype/wtt.c: Add documentation from wtt.3.
	Use enum instead of #define.

	* man/man3/wtt.c: Revised.

2006-08-01  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* include/thai/thctype.h: Add documentation taken from thctype.3.

	* man/man3/thctype.3: Revised.

	* doc/Doxyfile.in: Append "include" to STRIP_FROM_PATH.

2006-07-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* include/thailib.h: Add main page using content from libthai.3.

	* man/man3/libthai.3: Fix typos.

2006-07-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* include/thai/{thbrk,thcoll}.h: Fix typos in comments.

	* include/thai/{thwbrk,thwchar,thwcoll,thwctype,thwstr}.h:
	Edit comments for documentation.

	* include/thai/thwctype.h, src/thwctype/thwctype.c: Add missing
	functions corresponding to thctype: th_wcisthdiac,
	th_wcistaillesscons, th_wcisovershootcons, th_wcisundershootcons,
	th_wcisundersplitcons.

2006-07-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in, Makefile.am, +doc/, +doc/Doxyfile.in,
	+doc/Makefile.am: Add document generation with doxygen.

	* include/thai/{thailib,thbrk,thcell,thcoll,thctype,thinp,thrend,
	thstr}.h: Edit comments for documentation.

2006-07-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thcoll/cweight.c (th_char_weight_()): Remove unnecessary check
	of c's range that always yields true.

	* src/thwchar/thwchar.c (uni2thai_ext_()): Fix loop condition that
	always yielded true due to range of data type.
